istio/greetings-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greetings-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings-virtual-service
spec:
  hosts:
  - '*'
  gateways:
  - greetings-gateway
  http:
  - match:
    - uri:
        prefix: /camel/greetings
    route:
    - destination:
        host: greetings-service
        port:
          number: 8080
